Ignore publication scraper output

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /env/
 */__pycache__/
+/crs_newsfetch/publication-scraper/scholar_publications.csv
+/crs_newsfetch/publication-scraper/crossref_publications.csv
